# Arabic-GEC

./: .env.example  .gitignore  LICENSE  README.md  extract_model_response.py  logger.py  main.py  pyproject.toml  run.py
app/: config.py  database.py  main.py
app/api/: routes.py
app/models/: schema.py
app/services/: correction_service.py  database_service.py
app/templates/: base.html  correction.html  history.html  index.html
app/web/: routes.py
static/css/: style.css
static/js/: main.js
